# project-template

./: .gitignore  CMakeLists.txt  README.md
app/: main.cpp
docs/: Doxyfile.in
inc/: DummyClass.hpp  ExampleClass.hpp
src/: DummyClass.cpp  ExampleClass.cpp
